tests/ui/traits/const-traits/trait-default-body-stability.stderr
error: const `impl` for trait `Try` which is not marked with `#[const_trait]`
  --> $DIR/trait-default-body-stability.rs:19:12
   |
LL | impl const Try for T {
   |            ^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `FromResidual` which is not marked with `#[const_trait]`
  --> $DIR/trait-default-body-stability.rs:34:12
   |
LL | impl const FromResidual for T {
   |            ^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0015]: `?` cannot determine the branch of `T` in constant functions
  --> $DIR/trait-default-body-stability.rs:45:9
   |
LL |         T?
   |         ^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot convert from residual of `T` in constant functions
  --> $DIR/trait-default-body-stability.rs:45:9
   |
LL |         T?
   |         ^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0015`.
